# microbit-musicbox-rs

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: accel.rs  button.rs  main.rs  player.rs
