[package]
name = "musicbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
rtic = { version = "2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0", features = ["nrf52833"] }
systick-monotonic = "1.0"
lsm303agr = "1.0.0"

embedded-hal = "1.0"
microbit-v2 = "0.15"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

fugit = { version = "0.3", features = ["defmt"] }
heapless = { version = "0.7", features = ["defmt"] }
